# nats-websocket-bridge

./: .gitignore  NatsWebSocketBridge.sln  README.md
.github/: copilot-instructions.md
demo/: README.md
demo/config/: demo_config.json
demo/devices/: CMakeLists.txt  conveyor_controller.cpp  estop_button.cpp  production_counter.cpp  temperature_sensor.cpp  vision_scanner.cpp
demo/devices/common/: demo_utils.cpp  demo_utils.h
demo/hmi/: hmi_panel.cpp
demo/orchestrator/: line_orchestrator.cpp
demo/scripts/: run_demo.sh
docker/historian/: docker-compose.yml
docker/historian/init-scripts/: 01-create-schema.sql
docker/monitoring/: README.md  docker-compose.yml
docker/monitoring/alertmanager/: alertmanager.yml
docker/monitoring/grafana/dashboards/: gateway-overview.json
docker/monitoring/grafana/provisioning/dashboards/: dashboards.yml
docker/monitoring/grafana/provisioning/datasources/: datasources.yml
docker/monitoring/loki/: loki-config.yml
docker/monitoring/prometheus/: prometheus.yml
docker/monitoring/prometheus/rules/: gateway-alerts.yml
docker/monitoring/promtail/: promtail-config.yml
docs/architecture/: JETSTREAM_VS_CORE_NATS.md
docs/compliance/: HISTORICAL_DATA_RETENTION.md
docs/diagrams/: README.md  class-diagrams.md  component-diagrams.md  presentation-diagrams.md  sequence-diagrams.md  state-diagrams.md
docs/monitoring/: MONITORING_ARCHITECTURE.md
docs/video/: DEMO_SCRIPTS.md  README.md  SERIES_OVERVIEW.md  SLIDE_DECK_OUTLINE.md  SPEAKER_NOTES.md  VIDEO_PRODUCTION_PLAN.md
docs/video/episodes/01-intro/: README.md  script.md  slides.md
docs/video/episodes/02-nats-fundamentals/: README.md  demo.md
docs/video/episodes/03-gateway-architecture/: README.md  demo.md  slides.md
docs/video/episodes/04-websocket-protocol/: MESSAGE_FLOW.md  README.md  WS_DEVELOPER_TUTORIAL.md  demo.md  slides.md
docs/video/episodes/05-device-sdk/: README.md  demo.md  slides.md
docs/video/episodes/06-monitoring-observability/: README.md  demo.md  slides.md
docs/video/episodes/07-historical-retention/: README.md  demo.md  slides.md
scripts/: generate_jwt.py
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/cmake/: gateway_device_config.cmake.in
sdk/cpp/docs/: INTEGRATION_GUIDE.md  PROTOCOL.md
sdk/cpp/examples/: CMakeLists.txt  actuator.cpp  controller.cpp  simple_sensor.cpp  temperature_sensor.cpp
sdk/cpp/include/gateway/: auth.h  config.h  error.h  gateway_device.h  logger.h  message.h  metrics.h  protocol.h  reconnect_policy.h  transport.h  types.h
sdk/cpp/src/: auth.cpp  gateway_client.cpp  logger.cpp  message.cpp  metrics.cpp  protocol.cpp  reconnect_policy.cpp  websocket_transport.cpp
src/NatsWebSocketBridge.Gateway/: NatsWebSocketBridge.Gateway.csproj  NatsWebSocketBridge.Gateway.http  Program.cs  appsettings.json
src/NatsWebSocketBridge.Gateway/Auth/: DeviceAuthorizationService.cs  IDeviceAuthenticationService.cs  IDeviceAuthorizationService.cs  InMemoryDeviceAuthenticationService.cs  JwtDeviceAuthService.cs
src/NatsWebSocketBridge.Gateway/Configuration/: GatewayOptions.cs  JetStreamOptions.cs  JwtOptions.cs  MonitoringOptions.cs
src/NatsWebSocketBridge.Gateway/Handlers/: DeviceWebSocketHandler.cs  WebSocketMiddleware.cs
src/NatsWebSocketBridge.Gateway/Models/: AuthenticationModels.cs  DeviceContext.cs  DeviceContext.md  DeviceInfo.cs  GatewayMessage.cs
src/NatsWebSocketBridge.Gateway/Properties/: launchSettings.json
src/NatsWebSocketBridge.Gateway/Services/: DeviceConnectionManager.cs  GatewayMetrics.cs  IDeviceConnectionManager.cs  IJetStreamNatsService.cs  IMessageBufferService.cs  IMessageThrottlingService.cs  IMessageValidationService.cs  INatsService.cs  JetStreamInitializationService.cs  JetStreamNatsService.cs  MessageBufferService.cs  MessageValidationService.cs  NatsInitializationService.cs  NatsService.cs  TokenBucketThrottlingService.cs
src/NatsWebSocketBridge.Historian/: Dockerfile  NatsWebSocketBridge.Historian.csproj  Program.cs  README.md  appsettings.json
src/NatsWebSocketBridge.Historian/Configuration/: HistorianOptions.cs
src/NatsWebSocketBridge.Historian/Models/: HistorianModels.cs
src/NatsWebSocketBridge.Historian/Services/: ArchivalService.cs  AuditLogService.cs  ChecksumService.cs  HistorianService.cs  IHistorianRepository.cs  TimescaleRepository.cs
tests/NatsWebSocketBridge.Tests/: DeviceAuthenticationServiceTests.cs  DeviceAuthorizationServiceTests.cs  DeviceConnectionManagerTests.cs  JwtDeviceAuthServiceTests.cs  MessageBufferServiceTests.cs  MessageValidationServiceTests.cs  NatsWebSocketBridge.Tests.csproj  TokenBucketThrottlingServiceTests.cs
